--- a/static/css/style.css
+++ b/static/css/style.css
@@ -294,7 +294,7 @@ a.search-bar-button {
     overflow-x: scroll;
     max-width: 100vw;
     min-height: 40vh;
-    padding: 10px;
+    padding: 0;
   }
 
   .card {
